# DuRTL

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.ad  CTestConfig.cmake  Dockerfile  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  experiments_analysis.cpp  experiments_apprx.cpp  experiments_ifa_ift.cpp  main.cpp
src/ducode/: design.cpp  instantiation_graph.cpp  module.cpp  signals_data_manager.cpp  testbench.cpp
src/ducode/utility/: VCD_utility.cpp  verilog_parser.cpp
tests/: CMakeLists.txt  test.cpp
tests/benchmarks/: benchmark_tests.cpp
tests/export/: ExportFlattenedVerilogTest.cpp  ExportTestBench.cpp  basicgates_exportVerilogTest.cpp  export_tests.cpp  single_cell_export_test.cpp
tests/ift/: export_ift_test.cpp  ift_analysis_tests.cpp  ift_flow.cpp  ift_logic.cpp  ift_test.cpp  long_tests.cpp  single_cell_ift_test.cpp
tests/qifa/: qifa_smt.cpp
tests/testfiles/: README.md
tests/testfiles/SPI_Master/: SPI_Master.json  SPI_Master.vcd  SPI_Master_exported.vcd  SPI_Master_old.json  SPI_Master_tb.v  results.vcd  test.v
tests/testfiles/SPI_Slave/: SPI_Slave.json  SPI_Slave.v  SPI_Slave.vcd  SPI_Slave_output_gate.vcd  SPI_Slave_output_gate_old.vcd  SPI_Slave_tb.v  output.vcd  spi_slave_export_test.v  spi_slave_gate_level_old.v
tests/testfiles/SPI_TopModule/: SPI_Master.v  SPI_Master_tb.v  SPI_Slave_tb.v  SPI_TopModule.json  SPI_TopModule.v  SPI_TopModule_tb.v  SPI_tb.v
tests/testfiles/aes_128/: README.md  aesVcdInput.txt  aes_128.json  aes_128.v  aes_128.vcd  aes_128VcdInput.txt  aes_128_tb.v  final_round.json  final_round.v  final_round_full.json
tests/testfiles/aes_128_mem/: aes_128_mem.json  aes_128_mem.vcd  aes_128_mem_tb.v
tests/testfiles/aes_module_t/: aes_module_t.json  aes_module_t.v  aes_module_t_tb.v
tests/testfiles/analysis_test/: analysis_test.json  analysis_test.v  analysis_test.vcd  analysis_test_tb.v
tests/testfiles/and/: and.json  and.v  and.vcd  and_tb.v  and_x_test_tb.v
tests/testfiles/apprx_add_experiments/: readme.md  tb_fft16_ofdm_apx_0.vcd  tb_fft16_ofdm_apx_1.vcd  tb_fft16_ofdm_apx_2.vcd  tb_fft16_ofdm_apx_3.vcd  tb_fft16_ofdm_apx_4.vcd  tb_fft16_ofdm_apx_5.vcd
tests/testfiles/apprx_add_experiments_WI/: fft16_apx.json  tb_fft16_ofdm_apx_0.vcd  tb_fft16_ofdm_apx_1.vcd  tb_fft16_ofdm_apx_2.vcd  tb_fft16_ofdm_apx_3.vcd  tb_fft16_ofdm_apx_4.vcd  tb_fft16_ofdm_apx_5.vcd
tests/testfiles/binary_gates/: binary_gates_test_tb.v
tests/testfiles/binary_gates_ift_test/: binary_gates_ift_test.json  binary_gates_ift_test.txt  binary_gates_ift_test.v  binary_gates_ift_test.vcd  binary_gates_ift_test_tb.v
tests/testfiles/constants/: constants.json  constants.v  constants.vcd  constants_1.json  constants_tb.v  constants_test.json
tests/testfiles/counter/: counter.json  counter.vcd
tests/testfiles/counter_ift/: counter_ift.json  counter_ift.txt  counter_ift.v  counter_ift.vcd  counter_ift_tb.v
tests/testfiles/cwe1302_Fix/: secureAccess.json  secureAccess.v  secureAccess_tb.v
tests/testfiles/cwe1302_Issue/: secureAccess.json  secureAccess.v
tests/testfiles/dff/: dff.json  dff.v  dff.vcd  dff_tb.v
tests/testfiles/dff_2x/: dff_2x.json  dff_2x.v  dff_2x.vcd  dff_2x_tb.v
tests/testfiles/dff_design/: dff_design.json  dff_design.v  dff_design.vcd  dff_design_f.vcd  dff_design_tb.v  dff_design_tb_f.v
tests/testfiles/dff_design_posneg_edge/: dff_design.json  dff_design.v  dff_design.vcd
tests/testfiles/dff_design_x/: dff_design.json  dff_design.v  dff_design_tb.v  dff_design_x.vcd
tests/testfiles/dff_hierarchy_design/: dff_hierarchy_design.json  dff_hierarchy_design.v  dff_hierarchy_design_tb.v
tests/testfiles/eth_fifo/: eth_fifo.json  eth_fifo.vcd  (+3 more)
tests/unit/: design.cpp  ifa.cpp  instantiation_graph.cpp  module.cpp  net.cpp  pipeline_detection.cpp  signalsdatamanager.cpp  smt2.cpp  smt2_unroll.cpp  smt2_validation.cpp
tests/usage/: Analysis.cpp  explainer_turbine_experiments.cpp  explainer_vehicles_experiments.cpp  smt2_exp_test.cpp
(+897 files in other folders)
